--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,39 +11,42 @@
 </head>
 <body>
     <!--NAVBAR-->
-    <div class="nav-back">
-        <nav>
-            <div class="nav-item">
-                <a href="#intros">Intro</a>
-                <a href="#academics">Academic</a>
-                <a href="#experiences">Experience</a>
-                <a href="#projects">Project</a>
-                <a href="#contacts">Contact</a>
-            </div>
-        </nav>
-    </div>
+    <nav>
+        <div class="nav-item">
+            <a href="#intros">Intro</a>
+            <a href="#academics">Academic</a>
+            <a href="#experiences">Experience</a>
+            <a href="#projects">Project</a>
+            <a href="#contacts">Social Media</a>
+        </div>
+    </nav>
     
+    <!--Contacts-->
+    <section class="contacts">
+        <div class="contacts-item">
+            <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>   
+        </div>
+    </section>
+
     <!--Intro-->
-    <div class="intro" id="intros">
+    <section class="intro" id="intros">
         <div class="intro-item">
             <div class="intro-fonts">
                 <h1>HANS CHRISTIAN HANDOTO</h1>
-                <h2>Informatics Engineering Student</h2>
+                <h2>Informatics Engineering Student | <span></span></h2>
             </div> 
-            <video autoplay loop muted>
-                <source src="src\Background.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
         </div>
-    </div>
+    </section>
 
    <!-- About Me -->
-    <div class="about" id="about">
+    <section class="about" id="about">
         <div class="about-item">
             <h1>ABOUT ME</h1>
             <p>
                 Hello, I'm Hans Christian Handoto. I am currently an undergraduate student in Informatics Engineering at 
-                Tarumanagara University. I have had the opportunity to lead and teach a class for approximately six months, 
+                Tarumanagara University. I have had the opportunity to <span class="highlight">lead and teach 58 students for approximately six months</span>, 
                 which has greatly enhanced my <span class="highlight">problem-solving, time-management, leadership and instructional skills.</span>  
                 My technical skills span across a range of areas, including <span class="highlight">full-stack web development, mobile app development, and UI/UX design.</span>
                 I am proficient in tools such as <span class="highlight">Adobe Photoshop, Premiere Pro, and Figma</span>, and have hands-on experience with programming languages 
@@ -72,31 +75,28 @@
                 </div>
             </div> 
         </div>        
-    </div>
+    </section>
 
 
     <!--Academic-->
-    <div class="academic" id="academics">
-        <div class="bubbles">
-            <div class="Deco-blue bubble1"></div>
-            <div class="Deco-blue-shade bubble2"></div>
-            <div class="Deco-blue-shade bubble3"></div>
-            <div class="Deco-blue bubble4"></div>
-            <div class="Deco-blue bubble5"></div>
-        </div>
+    <section class="academic" id="academics">
         <h1>ACADEMIC</h1>
         <div class="animate-on-scroll slide-up">
             <div class="academic-item">
                 <div class="colorized" style="transition-delay: 0.6s">
                     <div class="academic-item-child">
-                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/SMAN19.png" alt="SMAN19"></a>
-                        <p>Science & Mathematics [2019 - 2022]</p>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/SMAN19.png" alt="SMAN19" class="sman19"></a>
+                        <div class="academic-item-text">
+                            <p>Science & Mathematics [2019 - 2022]</p>
+                        </div>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.7s">
                     <div class="academic-item-child">
-                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/UNTAR.png" alt="UNTAR"></a>
-                        <p>Information Technology [2022 - Now]</p>
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/UNTAR.png" alt="UNTAR" class="untar"></a>
+                        <div class="academic-item-text">
+                            <p>Information Technology [2022 - Now]</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,44 +107,55 @@
                 <div class="colorized" style="transition-delay: 0.5s">
                     <div class="academic-item-child">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Skilvul.png" alt="Skilvul"></a>
-                        <p>Data Structure using Python [2024]</p>
+                        <div class="academic-item-text">
+                            <p>Data Structure using Python [2024]</p>
+                        </div>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.6s">
                     <div class="academic-item-child">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/RedHat.png" alt="Redhat"></a>
-                        <p>Red Hat System Administration I (RH124) [2023]</p>
+                        <div class="academic-item-text">
+                            <p>Red Hat System Administration I (RH124) [2023]</p>
+                        </div>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.7s">
                     <div class="academic-item-child">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Huawei.png" alt="Huawei"></a>
-                        <p>HCIA - Cloud Service V3.0 [2023]</p>
-                        <p>HCIA - AI V3.0 [2023]</p>
+                        <div class="academic-item-text">
+                            <p>HCIA - Cloud Service V3.0 [2023]</p>
+                            <p>HCIA - AI V3.0 [2023]</p>
+                        </div>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.5s">
                     <div class="academic-item-child">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Udemy.png" alt="Udemy"></a>
-                        <p>Basic Data Science using Python [2023]</p>
+                        <div class="academic-item-text">
+                            <p>Basic Data Science using Python [2023]</p>
+                        </div>
                     </div>
                 </div>
                 <div class="colorized" style="transition-delay: 0.5s">
                     <div class="academic-item-child">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Dicoding.png" alt="Dicoding"></a>
-                        <p>Basic Data Science [2024]</p>
-                        <p>Basic SQL [2024]</p>
-                        <p>Python Programming [2024]</p>
+                        <div class="academic-item-text">
+                            <p>Basic Data Science [2024]</p>
+                            <p>Basic SQL [2024]</p>
+                            <p>Python Programming [2024]</p>
+                            <p>Python Data Analytics [2024]</p>
+                        </div>
                     </div>
                 </div>
 
             </div>
         </div>
 
-    </div>
+    </section>
 
     <!--Experience-->
-    <div class="experience" id="experiences">
+    <section class="experience" id="experiences">
         <h1>EXPERIENCE</h1>
         <div class="animate-on-scroll slide-right">
             <div class="experience-item left">
@@ -202,7 +213,7 @@
                 <div class="experience-item-child">
                     <div class="animate-on-scroll slide-left">
                         <div class="experience-item-child-text-right">
-                            <h2>Varanity Clothing</h2>
+                            <h2>Varanity</h2>
                             <div class="lighten">
                                 <ul id="Varanity-list"></ul>
                             </div>
@@ -214,10 +225,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--Project-->
-    <div class="project" id="projects">
+    <section class="project" id="projects">
         <div class="project-item">
             <div class="carousel">
                 <div class="track">
@@ -236,7 +247,7 @@
                     <div class="slide">
                         <img src="src/Appdev.png" alt="UI/UX"> 
                         <div class="slide-text">
-                            <a href="/appdev"><h2>UI/UX</h2></a>
+                            <a href="/uiux"><h2>UI/UX</h2></a>
                         </div>
                     </div>
                     <div class="slide">
@@ -250,7 +261,7 @@
                 <button class="next">&#8594</button>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--Footer-->
     <footer class="footer" id="contacts">
@@ -258,25 +269,24 @@
             <div class="footer-loc">
                 <h1>Home</h1>
                 <div class="links">
-                    <a href="">Jakarta, Indonesia</a>
+                    <a href="https://www.google.com/maps/place/Jakarta+Barat,+Kec.+Kb.+Jeruk,+Kota+Jakarta+Barat,+Daerah+Khusus+Ibukota+Jakarta/@-6.1599916,106.6748571,12z/data=!3m1!4b1!4m6!3m5!1s0x2e69f7c9d110d719:0x300c5e82dd4b8a0!8m2!3d-6.1674309!4d106.7637239!16zL20vMDdfZGQz?entry=ttu&g_ep=EgoyMDI0MTAyMS4xIKXMDSoASAFQAw%3D%3D">Jakarta, Indonesia</a>
                 </div>
             </div>
             <div class="footer-socialmedia">
-                <h1>Contact Me</h1>
+                <h1>Social Media</h1>
                 <div class="links">
                     <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
-                    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/hnscns/" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-project">
-                <h1>Portofolio</h1>
+                <h1>Projects</h1>
                 <div class="links">
-                    <a href="">Web Development</a>
-                    <a href="">App Development</a>
-                    <a href="">Data Visualization</a>
+                    <a href="/webdev">Web Development</a>
+                    <a href="/appdev">App Development</a>
+                    <a href="/data">Data</a>
                     <a href="">UI/UX Design</a>
                 </div>
             </div>
