--- a/views/uiux.ejs
+++ b/views/uiux.ejs
@@ -20,7 +20,7 @@
                 <div class="dropdown-content">
                     <a href="/webdev">Web Development</a>
                     <a href="/data">Data</a>
-                    <a href="/uiux">UI/UX Design</a>
+                    <a href="/appdev">App Development</a>
                 </div>
             </div>
         </div>
@@ -40,26 +40,46 @@
     <section class="project" id="projects">
         <!--Project Item-->
         <div class="project-item">
-            <h1>Poutendance</h1>
+            <h1>Twizzed</h1>
             <div class="carousel-used">
-                <p>Aplikasi UKM Berbasis Lokasi: Sistem Check-In dan Check-Out Ruangan serta Pemindahan Kunci Menggunakan QR Acak</p>
+                <p>Twitter-like app</p>
                 <div class="used">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dart/dart-original.svg" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/flutter/flutter-original.svg" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/firebase/firebase-original.svg" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
                 </div>
                 <div class="carousel">
                     <div class="track">
-                        <img src="src\Appdev_Poutendance\loginregister.png" alt="Login & Register Page" class="slide">
-                        <img src="src\Appdev_Poutendance\profil.png" alt="Profile & Home page" class="slide">
-                        <img src="src\Appdev_Poutendance\scan.png" alt="Scanner & QR page" class="slide">
+                        <img src="src/uiux_Twizzed/v1.png" alt="Ex 1" class="slide">
+                        <img src="src/uiux_Twizzed/v2.png" alt="Ex 2" class="slide">
+                        <img src="src/uiux_Twizzed/v3.png" alt="Ex 3" class="slide">
+                        <img src="src/uiux_Twizzed/v4.png" alt="Ex 4" class="slide">
+                        <img src="src/uiux_Twizzed/prototype.png" alt="Prototype" class="slide">
                     </div>
                     <button class="prev">&#8592;</button>
                     <button class="next">&#8594;</button>
                 </div>
             </div>
         </div>
+        <div class="project-item">
+            <h1>Poutendance</h1>
+            <div class="carousel-used">
+                <p>Location-Based Attendance App</p>
+                <div class="used">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
+                </div>
+                <div class="carousel">
+                    <div class="track">
+                        <img src="src/uiux_Poutendance/v1.png" alt="Ex 1" class="slide">
+                        <img src="src/uiux_Poutendance/v2.png" alt="Ex 2" class="slide">
+                        <img src="src/uiux_Poutendance/v3.png" alt="Ex 3" class="slide">
+                        <img src="src/uiux_Poutendance/v4.png" alt="Ex 4" class="slide">
+                        <img src="src/uiux_Poutendance/prototype.png" alt="Prototype" class="slide">
+                    </div>
+                    <button class="prev">&#8592;</button>
+                    <button class="next">&#8594;</button>
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <!--Footer-->
