--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -14,21 +14,30 @@
     <nav>
         <div class="nav-item">
             <a href="/">Home</a>
-            <a href="#contacts">Contact</a>
+            <a href="#contacts">Social Media</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
                     <a href="/data">Data</a>
-                    <a href="#">UIUX Design</a>
+                    <a href="/uiux">UIUX Design</a>
                     <a href="/appdev">App Development</a>
                 </div>
             </div>
         </div>
     </nav>
 
+    <!--Contacts-->
+    <section class="contacts">
+        <div class="contacts-item">
+            <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>   
+        </div>
+    </section>
+
     <!--Project-->
     <!--https://devicon.dev/-->
-    <div class="project" id="projects">
+    <section class="project" id="projects">
         <!--Project Item-->
         <div class="project-item">
             <h1>SPICITE</h1>
@@ -127,7 +136,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--Footer-->
     <footer class="footer" id="contacts">
@@ -135,11 +144,11 @@
             <div class="footer-loc">
                 <h1>Home</h1>
                 <div class="links">
-                    <a href="">Jakarta, Indonesia</a>
+                    <a href="https://www.google.com/maps/place/Jakarta+Barat,+Kec.+Kb.+Jeruk,+Kota+Jakarta+Barat,+Daerah+Khusus+Ibukota+Jakarta/@-6.1599916,106.6748571,12z/data=!3m1!4b1!4m6!3m5!1s0x2e69f7c9d110d719:0x300c5e82dd4b8a0!8m2!3d-6.1674309!4d106.7637239!16zL20vMDdfZGQz?entry=ttu&g_ep=EgoyMDI0MTAyMS4xIKXMDSoASAFQAw%3D%3D">Jakarta, Indonesia</a>
                 </div>
             </div>
             <div class="footer-socialmedia">
-                <h1>Contact Me</h1>
+                <h1>Social Media</h1>
                 <div class="links">
                     <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
@@ -149,11 +158,11 @@
                 </div>
             </div>
             <div class="footer-project">
-                <h1>Portofolio</h1>
+                <h1>Projects</h1>
                 <div class="links">
-                    <a href="">Web Development</a>
-                    <a href="">App Development</a>
-                    <a href="">Data Visualization</a>
+                    <a href="/webdev">Web Development</a>
+                    <a href="/appdev">App Development</a>
+                    <a href="/data">Data</a>
                     <a href="">UI/UX Design</a>
                 </div>
             </div>
