--- a/public/css/project.css
+++ b/public/css/project.css
@@ -9,10 +9,16 @@
 html{
     margin: 0;
 }
-
+:root{
+    --bg-color: #1c1c1c;
+    --primary-color: #84b7dc;
+    --secondary-color: #c1ddf0;
+    --text-color: #F1F1F1;
+    --accent-color: #06F7FF;
+}
 body{
-    color: #F1F1F1;
-    background-color: #1C1C1C;
+    color: var(--text-color);
+    background-color: var(--bg-color);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Montserrat', sans-serif;
@@ -28,7 +34,7 @@ body{
     display: none; 
 }
 ::selection {
-    color: #F1F1F1; 
+    color: var(--text-color); 
     background-color: #378bc8;
     animation: gradientHighlight 1s infinite alternate; 
 }
@@ -40,6 +46,7 @@ body{
 
 a{
     text-decoration: none;
+    color: var(--text-color);
 }
 
 /*
@@ -69,20 +76,21 @@ nav {
 }
 
 .nav-item a {
-    color: #F1F1F1;
+    color: var(--text-color);
     text-decoration: none;
     padding: 5px;
     border-radius: 8px;
 }
 
 .nav-item a:hover {
-    background-color: #84b7dc;
-    color: #1C1C1C;
+    background-color: var(--primary-color);
+    color: var(--primary-color);
     transition: 0.3s color ease-in-out, 0.3s background-color ease-in-out;
 }
 
 .nav-item a:active {
-    color: #06F7FF;
+    background-color: transparent;
+    color: var(--accent-color);
     transition: 0.5s color ease;
 }
 
@@ -124,7 +132,43 @@ nav {
     }
 }
 
-/* DROPDOWN */
+/*
+
+
+Contacts
+
+
+*/
+.contacts {
+    margin: 0;
+    position: fixed;
+    left: 10px;
+    top: 50%;
+    z-index: 99999;
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    padding: 30px 10px; 
+    width: auto;
+}
+.contacts-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.contacts-item a{
+    color: var(--text-color);
+    margin: 0 15px;
+    text-decoration: none;
+    font-size: 24px;
+}
+
+/* 
+
+DROPDOWN 
+
+*/
 .dropdown {
     position: relative;
     display: flex;
@@ -142,7 +186,7 @@ nav {
 }
 
 .dropdown-content a {
-    color: #F1F1F1; 
+    color: var(--text-color); 
     padding: 10px 15px; 
     display: block; 
 }
@@ -254,7 +298,7 @@ PROJECT
     min-width: 100%;
     min-height: 100%;
     font-size: 2rem;
-    background: #1C1C1C;
+    background: var(--bg-color);
     gap: 15px;
     border-image: fill 0 linear-gradient(#0001, #111)
 }
@@ -267,7 +311,7 @@ PROJECT
 
 .slide a{
     text-decoration: none;
-    color: #F1F1F1;
+    color: var(--text-color);
 }
 
 .slide img{
@@ -278,7 +322,7 @@ PROJECT
 .prev {
     left: 0;
     margin: 4px;
-    color: #F1F1F1;
+    color: var(--text-color);
     position: absolute;
     top: 50%;
     border: none;
@@ -294,7 +338,7 @@ PROJECT
 .next {
     right: 0;
     margin: 4px;
-    color: #F1F1F1;
+    color: var(--text-color);
     position: absolute;
     top: 50%;
     border: none;
@@ -317,8 +361,8 @@ PROJECT
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #84b7dc; 
-    color: #F1F1F1;
+    background-color: var(--primary-color); 
+    color: var(--text-color);
     padding: 5px 10px; 
     border-radius: 5px; 
     font-size: 1rem; 
@@ -342,10 +386,14 @@ PROJECT
 }
 
 
-/*FOOTER*/
+/*
+
+FOOTER
+
+*/
 .footer {
     background-color: #333333;
-    color: #F1F1F1;
+    color: var(--text-color);
     text-align: center;
     padding: 40px;
     position: relative;
@@ -357,14 +405,16 @@ PROJECT
     gap: 10px;
 }
 .footer-child h1{
-    color: #84b7dc;
+    color: var(--primary-color);
     margin: 10px 15px;
     text-decoration: none;
     font-size: 24px;
     text-align: start;
 }
 
-/* Location */
+/* 
+Location 
+*/
 .footer-child .footer-loc{
     display: flex;
     flex-direction: column;
@@ -378,7 +428,7 @@ PROJECT
     text-align: start;
 }
 .footer-child .footer-loc a {
-    color: #F1F1F1;
+    color: var(--text-color);
     margin: 0 15px;
     text-decoration: none;
     font-size: 16px;
@@ -389,7 +439,9 @@ PROJECT
     color: #BFBFBF;
 }
 
-/* Social Media */
+/* 
+Social Media 
+*/
 .footer-child .footer-socialmedia{
     display: flex;
     flex-direction: column;
@@ -404,7 +456,7 @@ PROJECT
     text-align: center;
 }
 .footer-child .footer-socialmedia a {
-    color: #F1F1F1;
+    color: var(--text-color);
     margin: 0 15px;
     text-decoration: none;
     font-size: 24px;
@@ -414,7 +466,9 @@ PROJECT
     color: #BFBFBF;
 }
 
-/* Projects */
+/* 
+Projects 
+*/
 .footer-child .footer-project{
     display: flex;
     flex-direction: column;
@@ -428,7 +482,7 @@ PROJECT
     text-align: end;
 }
 .footer-child .footer-project a {
-    color: #F1F1F1;
+    color: var(--text-color);
     margin: 0 15px;
     text-decoration: none;
     font-size: 16px;
@@ -439,7 +493,11 @@ PROJECT
     color: #BFBFBF;
 }
 
-/* ANIMATED SCROLLING */
+/* 
+
+ANIMATED SCROLLING 
+
+*/
 .animate-on-scroll {
     opacity: 0;
     transition: opacity 1s ease-out;
