--- a/views/index.ejs
+++ b/views/index.ejs
@@ -245,7 +245,7 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="src/Appdev.png" alt="UI/UX"> 
+                        <img src="src/UIUX.png" alt="UI/UX"> 
                         <div class="slide-text">
                             <a href="/uiux"><h2>UI/UX</h2></a>
                         </div>
@@ -287,7 +287,7 @@
                     <a href="/webdev">Web Development</a>
                     <a href="/appdev">App Development</a>
                     <a href="/data">Data</a>
-                    <a href="">UI/UX Design</a>
+                    <a href="/uiux">UI/UX Design</a>
                 </div>
             </div>
         </div>
