--- a/views/uiux.ejs
+++ b/views/uiux.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hans CH</title>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://vercel.live https://cdnjs.cloudflare.com; style-src 'self' https://cdnjs.cloudflare.com;">
     <link rel="stylesheet" href="css/project.css">
     <script src="js/project.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
