--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,6 +74,8 @@ nav {
     gap: 50px;
     font-weight: 700;
     font-size: 1rem;
+    padding: 15px; 
+    min-width: 100px;
 }
 
 .nav-item a {
@@ -95,41 +97,51 @@ nav {
     transition: 0.5s color ease;
 }
 
-@media screen and (max-width: 768px) {
-
-    nav{
-        padding: 5px 15px;
-        width: 80%;
-    }
-    .nav-item {
-        flex-wrap: wrap; 
-        padding: 10px 10px; 
-        gap: 3px;
-        font-size: 0.8rem;
-    }
-
-    .nav-item a {
-        padding: 5px 10px; 
-    }
+.hamburger {
+    display: none;
+    cursor: pointer;
+    font-size: 1.5rem;
 }
 
-@media screen and (max-width: 480px) {
-
-    nav{
-        padding: 2px 10px;
-        width: 60%;
+@media screen and (max-width: 768px) {
+    nav {
+        margin: 0;
+        position: fixed;
+        top: 11px;
+        left: 86%;
+        transform: translateX(-14%);
+        z-index: 99999;
+        padding: 7px 10px; 
     }
-
     .nav-item {
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-        padding: 5px 10px;
+        display: none; 
+        flex-direction: column; 
+        position: absolute;
+        top: 100%;
+        left: 23%;
+        transform: translateX(-77%);
+        background: rgba(255, 255, 255, 0.9); 
+        border-radius: 8px;
+        padding: 10px;
+        z-index: 9999;
+        gap: 10px;
     }
 
     .nav-item a {
-        padding: 10px 15px;
-        font-size: 1rem;
+        color: var(--bg-color);
+        text-decoration: none;
+        padding: 5px;
+        border-radius: 8px;
+    }
+
+    .nav-item.active {
+        display: flex; 
+    }
+
+    .hamburger {
+        display: block; 
+        font-size: 16px;
+        
     }
 }
 
@@ -169,6 +181,27 @@ Contacts
     transition: 0.3s color ease-in-out, 0.3s background-color ease-in-out;
 }
 
+@media screen and (max-width: 768px) {
+    .contacts {
+        margin: 0;
+        position: fixed;
+        left: 50%;
+        top: 10px;
+        transform: translateX(-50%);
+        z-index: 99999;
+        padding: 8px 20px; 
+    }
+    .contacts-item{
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+    }
+    .contacts-item a{
+        margin: 0;
+        text-decoration: none;
+        font-size: 16px;
+    }
+}
 /*
 
 INTRO
