--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,9 @@
 <body>
     <!--NAVBAR-->
     <nav>
+        <div class="hamburger" onclick="toggleMenu()">
+            &#9776;
+        </div>
         <div class="nav-item">
             <a href="#intros">Intro</a>
             <a href="#academics">Academic</a>
