--- a/views/data.ejs
+++ b/views/data.ejs
@@ -108,7 +108,7 @@
                     <a href="/webdev">Web Development</a>
                     <a href="/appdev">App Development</a>
                     <a href="/data">Data</a>
-                    <a href="">UI/UX Design</a>
+                    <a href="/uiux">UI/UX Design</a>
                 </div>
             </div>
         </div>
