--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -136,6 +136,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="project-item">
+            <h1>Transjakarta Look-alike</h1>
+            <div class="carousel-used">
+                <div class="used">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angularjs/angularjs-original.svg" />
+                </div>
+                <div class="carousel">
+                    <div class="track">
+                        <img src="src/Webdev_Transjakarta/intro.jpg" alt="Intro" class="slide">
+                        <img src="src/Webdev_Transjakarta/rute.jpg" alt="Rute" class="slide">
+                        <img src="src/Webdev_Transjakarta/koridot.jpg" alt="Koridor" class="slide">
+                        <img src="src/Webdev_Transjakarta/type.jpg" alt="Bus Type" class="slide">
+                        <img src="src/Webdev_Transjakarta/footer.jpg" alt="Footer" class="slide">
+                    </div>
+                    <button class="prev">&#8592;</button>
+                    <button class="next">&#8594;</button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!--Footer-->
@@ -163,7 +186,7 @@
                     <a href="/webdev">Web Development</a>
                     <a href="/appdev">App Development</a>
                     <a href="/data">Data</a>
-                    <a href="">UI/UX Design</a>
+                    <a href="/uiux">UI/UX Design</a>
                 </div>
             </div>
         </div>
