--- a/public/css/home.css
+++ b/public/css/home.css
@@ -103,45 +103,41 @@ nav {
     font-size: 1.5rem;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 768px) {
     nav {
-        margin: 0;
-        position: fixed;
-        top: 11px;
-        left: 86%;
-        transform: translateX(-14%);
-        z-index: 99999;
-        padding: 7px 10px; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        padding: 10px 20px;
+        transform: none;
     }
+
     .nav-item {
-        display: none; 
-        flex-direction: column; 
+        display: none;
+        flex-direction: column;
         position: absolute;
         top: 100%;
-        left: 23%;
-        transform: translateX(-77%);
-        background: rgba(255, 255, 255, 0.9); 
-        border-radius: 8px;
-        padding: 10px;
-        z-index: 9999;
+        left: 0;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.9);
+        padding: 10px 0;
+        border-radius: 0;
         gap: 10px;
     }
 
     .nav-item a {
         color: var(--bg-color);
-        text-decoration: none;
-        padding: 5px;
-        border-radius: 8px;
+        text-align: center;
+        padding: 10px;
+        width: 100%;
     }
 
     .nav-item.active {
-        display: flex; 
+        display: flex;
     }
 
     .hamburger {
-        display: block; 
-        font-size: 16px;
-        
+        display: block;
     }
 }
 
@@ -181,7 +177,7 @@ Contacts
     transition: 0.3s color ease-in-out, 0.3s background-color ease-in-out;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 768px) {
     .contacts {
         margin: 0;
         position: fixed;
@@ -218,7 +214,6 @@ INTRO
     width: 100%;
     height: 810px;
 }
-
 .intro-fonts{
     position: absolute;
     z-index: 1;
