--- a/public/css/home.css
+++ b/public/css/home.css
@@ -249,7 +249,7 @@ Contacts
 
     .contacts-item {
         display: flex;
-        flex-direction: column; 
+        flex-direction: row; 
         gap: 10px; 
         align-items: center;
     }
@@ -339,16 +339,54 @@ INTRO
 }
 
 @media screen and (max-width: 768px) {
-    .intro-item h1{
-        font-size: 2.5rem;
-        letter-spacing: 5px;
-        margin: 15px;
+    .intro-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 600px;
+        margin-left: 5px;
     }
+    
+    .intro-item h1 {
+        font-size: 3rem;
+        font-weight: 700;
+        letter-spacing: 6px;
+        margin-top: 30px;
+    }
+    
+    .intro-item h2 {
+        font-size: 1.5rem;
+        font-weight: 400;
+        letter-spacing: 4px;
+        text-wrap: nowrap;
+    }
+
+}
+
+@media screen and (max-width: 360px){
+    .intro-item{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 500px;
+        margin-left: 10px;
+    }
+
+    .intro-item h1{
+        font-size: 1.5rem;
+        font-weight: 500;
+        letter-spacing: 4px;
+    }
+    
     .intro-item h2{
         font-size: 1rem;
-        letter-spacing: 2px;
-        margin: 15px;
+        font-weight: 300;
+        letter-spacing: 3px;
+        text-wrap:wrap;
     }
+    
 }
 
 /*
@@ -398,7 +436,6 @@ ABOUT
         color: var(--accent-color); 
     }
 }
-
 
 .highlight {
     opacity: 1;
@@ -489,6 +526,131 @@ ABOUT
     to { width: 10%; }
 }
 
+@media screen and (max-width: 768px) {
+    .about-item {
+        margin: 20px 10px;
+        padding: 15px 8px;
+    }
+    
+    .about-item h1 {
+        font-size: 2rem;
+        font-weight: 600;
+        letter-spacing: 4px;
+        text-align: center;
+        margin: 8px 0;
+    }
+    
+    .about-item p {
+        font-size: 0.9rem;
+        font-weight: 300;
+        text-align: justify;
+        letter-spacing: 1px;
+        line-height: 1.4;
+    }
+
+    .stats {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 15px;
+        align-items: center;
+        width: 90%;
+    }
+
+    .language-proficiency {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+        align-items: center;
+        width: 100%;
+        font-size: 0.9rem;
+        justify-content: center;
+    }
+
+    .language-bar {
+        flex: 1;
+        background-color: #333333;
+        border-radius: 4px;
+        overflow: hidden;
+        height: 12px;
+        max-width: 250px;
+        position: relative;
+        margin-left: 6px;
+    }
+
+    .bar {
+        height: 100%;
+        background-color: var(--primary-color);
+        text-align: center;
+        line-height: 12px;
+        color: var(--text-color);
+        transition: width 0.5s ease-in-out;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+    }
+}
+@media screen and (max-width: 360px) {
+    .about-item {
+        margin: 20px 10px;
+        padding: 10px 5px;
+    }
+    
+    .about-item h1 {
+        font-size: 1.5rem;
+        font-weight: 500;
+        letter-spacing: 4px;
+        text-align: center;
+        margin: 8px 0;
+    }
+    
+    .about-item p {
+        font-size: 0.8rem;
+        font-weight: 300;
+        text-align: justify;
+        letter-spacing: 1px;
+        line-height: 1.3;
+    }
+    
+    .stats {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 15px;
+        align-items: center;
+        width: 80%;
+    }
+    
+    .language-proficiency {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+        align-items: center;
+        width: 100%;
+        font-size: 0.8rem;
+        justify-content: center;
+    }
+    
+    .language-bar {
+        flex: 1;
+        background-color: #333333;
+        border-radius: 4px;
+        overflow: hidden;
+        height: 10px;
+        max-width: 180px;
+        position: relative; 
+        margin-left: 6px;
+    }
+    
+    .bar {
+        height: 100%;
+        background-color: var(--primary-color);
+        text-align: center;
+        line-height: 10px; 
+        color: var(--text-color);
+        transition: width 0.5s ease-in-out;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+    }
+}
+
 
 /*
 
@@ -506,7 +668,7 @@ ACADEMIC
 .academic h1{
     margin: 20px 10px;
     font-size: 2.5rem;
-    font-weight: 700;
+    font-weight: 500;
     letter-spacing: 5px;
     z-index: 999;
 }
@@ -534,6 +696,76 @@ ACADEMIC
     filter: grayscale(100%); 
     transform: scale(0.95); 
 }
+@media screen and (max-width: 768px) {
+    .academic {
+        margin: 40px 0;
+        text-align: center;
+    }
+
+    .academic h1 {
+        margin: 15px 8px;
+        font-size: 2rem;
+        font-weight: 500;
+        letter-spacing: 4px;
+    }
+
+    .academic-item {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        max-width: 600px;
+        margin: 0 auto;
+        gap: 1rem;
+    }
+
+    .academic-item-text {
+        padding: 5px 0;
+        font-size: 0.8rem;
+    }
+
+    .academic-item-child img {
+        height: 150px;
+        width: 150px;
+        margin: 0 8px;
+        border-radius: 8px;
+        transition: filter 0.3s ease-in-out, transform 0.5s ease-in-out;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .academic {
+        margin: 30px 0;
+        text-align: center;
+    }
+
+    .academic h1 {
+        margin: 15px 8px;
+        font-size: 1.5rem;
+        font-weight: 500;
+        letter-spacing: 3px;
+    }
+
+    .academic-item {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 100%;
+        margin: 0 auto;
+        gap: 0.5rem;
+    }
+
+    .academic-item-text {
+        padding: 3px 0;
+        font-size: 0.7rem;
+    }
+
+    .academic-item-child img {
+        height: 100px;
+        width: 100px;
+        margin: 0 5px;
+        border-radius: 8px;
+        transition: filter 0.3s ease-in-out, transform 0.5s ease-in-out;
+    }
+}
+
 
 /*
 
@@ -550,7 +782,13 @@ EXPERIENCE
     box-sizing: border-box;
     width: calc(100% - 40px);
 }
-
+.experience h1{
+    margin: 20px 10px;
+    font-size: 2.5rem;
+    font-weight: 500;
+    letter-spacing: 5px;
+    z-index: 999;
+}
 .experience-item {
     display: flex;
     align-items: center; 
@@ -695,6 +933,74 @@ ul {
     opacity: 1;
 }
 
+@media screen and (max-width: 768px) {
+    .experience {
+        margin: 40px 15px;
+        text-align: center;
+        width: calc(100% - 30px);
+    }
+    .experience h1 {
+        font-size: 2rem;
+        margin: 15px 10px;
+        letter-spacing: 4px;
+    }
+    .experience-item {
+        flex-direction: column;
+        margin: 1rem 0;
+    }
+    .experience-item-child {
+        gap: 15px;
+    }
+    .experience-item-child img {
+        height: 150px;
+        width: 150px;
+    }
+    .experience-item-child-text-right h2,
+    .experience-item-child-text-left h2 {
+        font-size: 1.2rem;
+        letter-spacing: 3px;
+    }
+    .experience-item-child-text p {
+        font-size: 0.8rem;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .experience {
+        margin: 30px 10px;
+        text-align: center;
+        width: calc(100% - 20px);
+    }
+    .experience h1 {
+        font-size: 1.5rem;
+        margin: 15px 8px;
+        letter-spacing: 3px;
+    }
+    .experience-item {
+        flex-direction: column;
+        margin: 0.5rem 0;
+    }
+    .experience-item-child {
+        gap: 10px;
+    }
+    .experience-item-child img {
+        height: 100px;
+        width: 100px;
+    }
+    .experience-item-child-text-right h2,
+    .experience-item-child-text-left h2 {
+        font-size: 1rem;
+        letter-spacing: 2px;
+    }
+    .experience-item-child-text p {
+        font-size: 0.6rem;
+    }
+    .experience-item-child-text-right li,
+    .experience-item-child-text-left li {
+        font-size: 0.6rem;
+    }
+}
+
 
 /*
 
@@ -802,18 +1108,158 @@ PROJECT
 }
 
 @media screen and (max-width: 768px) {
+    .carousel {
+        position: relative;
+        width: 100%;
+        height: 80vh; 
+        border-radius: 0.4rem;
+        margin: auto;
+        overflow: hidden;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    }
+      
+    .track {
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 300ms ease-in-out;
+        text-align: center;
+    }
+      
     .slide {
-        gap: 5px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 1.5rem;
+        background: var(--bg-color);
+        gap: 15px;
+        border-image: fill 0 linear-gradient(#0001, #111);
     }
-    .slide h2{
-        font-size: 2rem;
+    
+    .slide h2 {
+        font-size: 2rem; 
         letter-spacing: 3px;
-        font-weight: 700;
     }
-    .slide button{
+    
+    .slide button {
+        font-size: 1.2rem; 
+        font-weight: 500;
+        letter-spacing: 2px;
+        background-color: transparent;
+        border: none;
+        justify-content: center;
+    }
+    
+    .prev {
+        left: 0;
+        margin: 10px;
+        color: var(--text-color);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        font-size: 1.2rem;
+        background: transparent;
+        cursor: pointer;
+        transition: color 200ms ease-in-out;
+    }
+      
+    .next {
+        right: 0;
+        margin: 10px;
+        color: var(--text-color);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        font-size: 1.2rem;
+        background: transparent;
+        cursor: pointer;
+        transition: color 200ms ease-in-out;
+    }
+
+}
+
+@media screen and (max-width: 360px) {
+
+    .carousel {
+        position: relative;
+        width: 100%;
+        height: auto;
+        border-radius: 0.4rem;
+        margin: auto;
+        overflow: hidden;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    }
+      
+    .track {
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 300ms ease-in-out;
+        text-align: center;
+    }
+      
+    .slide {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 100%;
+        min-height: 100%;
         font-size: 1rem;
-        font-weight: 300;
+        background: var(--bg-color);
+        gap: 15px;
+        border-image: fill 0 linear-gradient(#0001, #111)
     }
+    
+    .slide h2 {
+        font-size: 1rem;
+        letter-spacing: 4px;
+    }
+    
+    .slide button{
+        font-size:1rem;
+        font-weight: 500;
+        letter-spacing: 2px;
+        background-color: transparent;
+        border: none;
+        justify-content: center;
+    }
+    
+    .prev {
+        left: 0;
+        margin: 10px;
+        color: var(--text-color);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        font-size: 1rem;
+        background: transparent;
+        cursor: pointer;
+        transition: color 200ms ease-in-out;
+    }
+      
+    .next {
+        right: 0;
+        margin: 10px;
+        color: var(--text-color);
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        font-size: 1rem;
+        background: transparent;
+        cursor: pointer;
+        transition: color 200ms ease-in-out;
+    }
+
 }
 
 /*
@@ -828,6 +1274,7 @@ FOOTER
     padding: 40px;
     position: relative;
     height: auto;
+    width: 100%;
 }
 .footer-child{
     display: grid;
@@ -923,6 +1370,216 @@ Projects
     color: #BFBFBF;
 }
 
+@media screen and (max-width: 768px) {
+    .footer {
+        background-color: #333333;
+        color: var(--text-color);
+        text-align: center;
+        padding: 20px; 
+        position: relative;
+        height: auto;
+        width: 100%;
+    }
+    .footer-child {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15px; 
+    }
+    .footer-child h1 {
+        color: var(--primary-color);
+        margin: 10px 15px;
+        text-decoration: none;
+        font-size: 1.5rem; 
+        text-align: start;
+    }
+    
+    /* 
+    Location 
+    */
+    .footer-child .footer-loc {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-loc .links {
+        display: flex;
+        flex-direction: row;
+        gap: 10px; 
+    }
+    .footer-child .footer-loc h1 {
+        text-align: start;
+    }
+    .footer-child .footer-loc a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 0.9rem; 
+        text-align: start;
+    }
+    .footer-child .footer-loc a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Social Media 
+    */
+    .footer-child .footer-socialmedia {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-socialmedia .links {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+    }
+    .footer-child .footer-socialmedia h1 {
+        text-align: center;
+    }
+    .footer-child .footer-socialmedia a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 1.1rem;
+    }
+    .footer-child .footer-socialmedia a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Projects 
+    */
+    .footer-child .footer-project {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-project .links {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .footer-child .footer-project h1 {
+        text-align: end;
+    }
+    .footer-child .footer-project a {
+        color: var(--text-color);
+        margin: 0 10px; 
+        text-decoration: none;
+        font-size: 0.9rem; 
+        text-align: end;
+    }
+    .footer-child .footer-project a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+}
+
+
+@media screen and (max-width: 360px) {
+    .footer {
+        background-color: #333333;
+        color: var(--text-color);
+        text-align: center;
+        padding: 5px;
+        position: relative;
+        height: auto;
+        width: 100%;
+    }
+    .footer-child{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 5px;
+    }
+    .footer-child h1{
+        color: var(--primary-color);
+        margin: 10px 15px;
+        text-decoration: none;
+        font-size: 1rem;
+        text-align: start;
+    }
+    
+    /* 
+    Location 
+    */
+    .footer-child .footer-loc{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-loc .links{
+        display: flex;
+        flex-direction: row;
+        gap: 3px;
+    }
+    .footer-child .footer-loc h1{
+        text-align: start;
+    }
+    .footer-child .footer-loc a {
+        color: var(--text-color);
+        margin: 0 15px;
+        text-decoration: none;
+        font-size: 0.7rem;
+        text-align: start;
+    }
+    .footer-child .footer-loc a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Social Media 
+    */
+    .footer-child .footer-socialmedia{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-socialmedia .links{
+        display: flex;
+        flex-direction: row;
+        gap: 3px;
+        justify-content: center;
+    }
+    .footer-child .footer-socialmedia h1{
+        text-align: center;
+    }
+    .footer-child .footer-socialmedia a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 0.7rem;
+    }
+    .footer-child .footer-socialmedia a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Projects 
+    */
+    .footer-child .footer-project{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-project .links{
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+    }
+    .footer-child .footer-project h1{
+        text-align: end;
+    }
+    .footer-child .footer-project a {
+        color: var(--text-color);
+        margin: 0 15px;
+        text-decoration: none;
+        font-size: 0.7rem;
+        text-align: end;
+    }
+    .footer-child .footer-project a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+}
 /* 
 
 ANIMATED SCROLLING 
